# vex-videoplayer

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  arm-none-eabi.meson  build-ffmpeg.sh  build.rs  dummy.c
.cargo/: config.toml
src/: main.rs
