[package]
name = "videoplayer"
version = "0.1.0"
edition = "2024"

build = "build.rs"

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.7.0"

[build-dependencies]
bindgen = "0.71"
