[package]
name = "videoplayer"
version = "0.1.0"
edition = "2024"

build = "build.rs"

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "monolith"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = { version = "0.7.0", features = ["force_rust_libm", "allocator"] }
rgb = "*"

#rusty_ffmpeg = { version = "0.16", features = ["ffmpeg7"] }
libc = { version = "0.2", default-features = false }

[build-dependencies]
bindgen = "0.71"

[patch.crates-io]
# very much something i threw together lmao, i'll make these part of my repo as a branch later
vexide = { path = "../vexide/packages/vexide" }
vexide-startup = { path = "../vexide/packages/vexide-startup" }
