[package]
name = "videoplayer"
version = "0.1.0"
edition = "2024"

build = "build.rs"

[profile.release]
opt-level = "z"
debug = 2
lto = "thin"
codegen-units = 1

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "monolith"
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = { version = "0.7.0", features = ["force_rust_libm"] }
rgb = "*"
vex-sdk = "*"
bytemuck = "*"

#rusty_ffmpeg = { version = "0.16", features = ["ffmpeg7"] }
libc = { version = "0.2", default-features = false }
fixed = { version = "1.29", default-features = false }

[build-dependencies]
bindgen = "0.71"

[patch.crates-io]
# Remove when PR goes through
vexide = { git = "https://github.com/GamingLiamStudios/vexide.git", branch = "patch/videoplayer" }
vexide-startup = { git = "https://github.com/GamingLiamStudios/vexide.git", branch = "patch/videoplayer" }
